--- a/paper.tex
+++ b/paper.tex
@@ -78,6 +78,8 @@
 \input{xy}
 \xyoption{all}
 
+\renewcommand{\floatpagefraction}{.8}
+
 \lstset{
 numbers=left,
 numberstyle=\tiny,
@@ -138,10 +140,10 @@ IBM Research, Israel
 
 
 
-\begin{small}
+%\begin{small}
 \bibliographystyle{plain}
 \bibliography{paper}
-\end{small}
+%\end{small}
 
 \balance
 
