--- a/related.tex
+++ b/related.tex
@@ -15,21 +15,21 @@ Budi et al.~\cite{BLJL:PLDI11} propose $kb$-anonymity, a model inspired by $k$-a
 
 While these proposals have all been shown useful, none of these approaches has been shown to be efficient enough to meet realtime constraints. The algorithmic complexity of computing the information-theoretic measures introduced by these works seriously limits their applicability in a realtime setting. Our approach, instead, enables a quantitative/probabilistic mode of reasoning that is simultaneously lightweight, and therefore acceptable for online monitoring, by focusing on relevant features that are efficiently computable.
 
-\paragraph{Static and Hybrid Analysis} The PiOS tool~\cite{EKKV:NDSS11} performs static leakage analysis of iOS applications. PiOS combines backward slicing with forward constant propagation for accurate resolution of method calls. It then performs standard taint analysis atop the resulting call graph, where path length is (unsoundly) limited to a maximum of 100 basic blocks. The authors report that over half of the 1,400 apps they analyzed leak the unique ID of their host device.
-Graa et al.~\cite{GCCC:CSS12} propose a hybrid tainting technique that augments dynamic taint analysis with certain classes of implicit flows (namely, those due to conditional statements). To do so, they apply intraprocedural static analysis to the control flow graph of a method at load time to detect variable assignments that occur only under one conditional branch. The FlowDroid tool~\cite{FARBBKTOM:PLDI14} performs static leakage analysis of Android applications using tainting. It accounts for the Android lifecycle model, handles callbacks and features flow, field and object sensitivity. FlowDroid builds on, and extends, previous taint analyses designed for the server side~\cite{TPFSW:PLDI09,TPCCG:FASE13} as well as client side~\cite{GPTDTB:ISSTA11} of web applications.
-
-In our experience, even precise static analysis techniques often suffer from a large number of false findings. These are due both to the qualitative (and coarse) nature of taint analysis and to other approximations (e.g., call-graph imprecisions). As for hybrid techniques, current techniques address challenges like implicit flows, where our experience suggests that for effective detection of data leakage by authentic apps, a more important dimension is the form and quantity of released information. In \secref{conclusion}, we outline a hybrid variant of \Tool\ that we plan to develop.
-
-\paragraph{Offline Algorithms} The AppsPlayground framework~\cite{RCE:CODASPY13}, built atop TaintDroid, performs dynamic analysis of mobile apps. It features automatic triggering of system events, including usage of contextual information to provide meaningful textual input. The AdRisk system~\cite{GZJS:SPWMN12} identifies potential privacy and security risks due to embedded in-app advertisement libraries. It first decouples the embedded ad libraries from the host app, and then applies state analysis to each of the libraries to approximate its behavior.
-AdSplit~\cite{SDW:SEC12} handles third-party advertising services differently by recompiling the app to extract such services, which consequently run as separate processes under separate user IDs.
-
-Our approach is extensible to the offline setting, e.g. by piggybacking on unit/integration tests and detecting leakage bugs during the development and testing phases of a mobile app. Our technique can also be integrated with frameworks like AppsPlayground, which provide automated crawling capabilities, to perform offline testing for leakage vulnerabilities. 
+%\paragraph{Static and Hybrid Analysis} The PiOS tool~\cite{EKKV:NDSS11} performs static leakage analysis of iOS applications. PiOS combines backward slicing with forward constant propagation for accurate resolution of method calls. It then performs standard taint analysis atop the resulting call graph, where path length is (unsoundly) limited to a maximum of 100 basic blocks. The authors report that over half of the 1,400 apps they analyzed leak the unique ID of their host device.
+%Graa et al.~\cite{GCCC:CSS12} propose a hybrid tainting technique that augments dynamic taint analysis with certain classes of implicit flows (namely, those due to conditional statements). To do so, they apply intraprocedural static analysis to the control flow graph of a method at load time to detect variable assignments that occur only under one conditional branch. The FlowDroid tool~\cite{FARBBKTOM:PLDI14} performs static leakage analysis of Android applications using tainting. It accounts for the Android lifecycle model, handles callbacks and features flow, field and object sensitivity. FlowDroid builds on, and extends, previous taint analyses designed for the server side~\cite{TPFSW:PLDI09,TPCCG:FASE13} as well as client side~\cite{GPTDTB:ISSTA11} of web applications.
+%
+%In our experience, even precise static analysis techniques often suffer from a large number of false findings. These are due both to the qualitative (and coarse) nature of taint analysis and to other approximations (e.g., call-graph imprecisions). As for hybrid techniques, current techniques address challenges like implicit flows, where our experience suggests that for effective detection of data leakage by authentic apps, a more important dimension is the form and quantity of released information. In \secref{conclusion}, we outline a hybrid variant of \Tool\ that we plan to develop.
+%
+%\paragraph{Offline Algorithms} The AppsPlayground framework~\cite{RCE:CODASPY13}, built atop TaintDroid, performs dynamic analysis of mobile apps. It features automatic triggering of system events, including usage of contextual information to provide meaningful textual input. The AdRisk system~\cite{GZJS:SPWMN12} identifies potential privacy and security risks due to embedded in-app advertisement libraries. It first decouples the embedded ad libraries from the host app, and then applies state analysis to each of the libraries to approximate its behavior.
+%AdSplit~\cite{SDW:SEC12} handles third-party advertising services differently by recompiling the app to extract such services, which consequently run as separate processes under separate user IDs.
+%
+%Our approach is extensible to the offline setting, e.g. by piggybacking on unit/integration tests and detecting leakage bugs during the development and testing phases of a mobile app. Our technique can also be integrated with frameworks like AppsPlayground, which provide automated crawling capabilities, to perform offline testing for leakage vulnerabilities. 
 
 \JC{
 \paragraph{Techniques for Protecting Web Applications}
 There exist numerous static and dynamic approaches for preventing attacks on web applications, e.g., \cite{TPFSW:PLDI09,TPCCG:FASE13,GPTDTB:ISSTA11}.
 Most relevant to our work are Sekar's taint-inference technique for deducing taint propagation by comparing inputs and outputs of a protected server-side application~\cite{Sekar:2009} and a similar browser-resident technique developed in a subsequent study~\cite{Pelizzi:Sekar:2012}.
 While \Tool\ shares ideas with these approaches, it is explicitly designed for mobile devices and applications. 
-Curtsinger et al.~\cite{Curtsinger:Livshits:Zorn:Seifert:2011} apply a Bayesian classifier for identifying JavaScript syntax elements that are highly predictive of malware. The solution proposed in that work, ZOZZLE, is used for analyzing application code in a static manner, while \Tool\ operates dynamically and focuses on data values.
+Curtsinger et al.~\cite{Curtsinger:Livshits:Zorn:Seifert:2011} apply a Bayesian classifier to identify JavaScript syntax elements that are highly predictive of malware. The proposed system, ZOZZLE, analyzes the application's code statically, while \Tool\ operates dynamically and focuses on data values.
 
 }
