--- a/exp1.tex
+++ b/exp1.tex
@@ -70,7 +70,7 @@ The results obtained for both TaintDroid and \Tool\ on version 1.1 of DroidBench
 }
 
 Overall, TaintDroid detects 31 true leakages while also reporting 17 false positives, whereas our approach suffers from 2 false negatives, discovering 29 of the true leakages while flagging only 1 false alarm.
-We averaged the F-measure calculation across all benchmarks (0.66 for TaintDroid vs. 0.96 for \Tool). 
+We averaged the F-measure calculation across all benchmarks (0.66 for TaintDroid vs 0.96 for \Tool). 
 We also provide the ``global'' score computed by considering all TP, FP and FN results together in parentheses  (0.78 vs 0.95).
 
 %We summarize the results as (i) the average across all app scores, shown outside the parentheses (0.96 for \Tool\ vs 0.69 for %TaintDroid), as well as (ii) the global accuracy score, computed as TPs / (TPs + FPs + Fns) (0.91 vs 0.65).
