--- a/exp2.tex
+++ b/exp2.tex
@@ -111,7 +111,7 @@ com.goldtouch.mako                     &       news               & \checkmark &
 \JC{
 As \tableref{realworldAccuracy} indicates,
 %, and \tableref{realworldAll} affirms more explicitly, 
-the H-BD variant is more accurate than the T-BD variant overall (F-measure of 0.99 vs. 0.84).
+the H-BD variant is more accurate than the T-BD variant overall (F-measure of 0.99 vs 0.84).
 As in the experiment described in \secref{overhead}, we performed a Welch's T-Test on the F-Measure results to further confirm this observation. The test establishes that the difference between the accuracy of the tools is significant (p-value=0.003 $<$ 0.05).
 Moreover, H-BD has a lower number of crashes and lower runtime overhead, which confirms H2.
 
