--- a/results.tex
+++ b/results.tex
@@ -11,14 +11,14 @@ For each value of $\ell$, we executed the app 51 times, picking a value from the
 
 \JC{
 \tableref{accuracyDBenchDetails} summarizes the results of the H1 experiment described in \secref{overhead}. 
-For each of the benchmarks, it specifies the number of true positive, false positive and false negative findings, as well as the calculated precision, recall and F-measure for the compared tools~-- \Tool\ and TaintDroid.
-The benchmarks for which the tools differ are highlighted, for convenience. 
-The F-measure is calculated by (a) averaging the corresponding values across all benchmarks and (b) directly by considering the total number of TPs, FPs and FNs results. Both values are given in \tableref{accuracyDBenchDetails}, outside and inside of the parentheses, respectively: 0.66 for TaintDroid vs. 0.96 for \Tool\ in the former case, and 0.78 vs 0.95 in the latter.
+For each of the benchmarks, it specifies the number of true-positive, false-positive and false-negative findings, as well as the calculated precision, recall and F-measure for the compared tools, \Tool\ and TaintDroid.
+The benchmarks on which the tools differ are highlighted for convenience. 
+The F-measure is calculated by (a) averaging the corresponding values across all benchmarks and (b) directly by considering the total number of TPs, FPs and FNs results. Both values are given in \tableref{accuracyDBenchDetails}, outside and inside of the parentheses, respectively: 0.66 for TaintDroid vs 0.96 for \Tool\ in the former case, and 0.78 vs 0.95 in the latter.
 
 Similarly, \tableref{realworldAll} summarizes the results of the H2 experiment described in \secref{practical}. 
 The first two columns of \tableref{realworldAll} list the applications and their respective domain, and the third column denotes whether crawling was exhaustive. 
-Then, the number of crashes, true positive, false positive and false negative findings, as well as the calculated precision, recall and F-measure are reported for both the H-BD and T-BD variant of \Tool. 
-As in \tableref{accuracyDBenchDetails}, the F-measure is calculated by (a) averaging the corresponding value across all benchmarks (0.99 for H-BD vs. 0.84 for T-BD), and (b) directly by considering the total number of TPs, FPs and FNs (0.98 vs. 0.74, in parentheses).
+Then, the number of crashes, true-positive, false-positive and false-negative findings, as well as the calculated precision, recall and F-measure are reported for both the H-BD and the T-BD variants of \Tool. 
+As in \tableref{accuracyDBenchDetails}, the F-measure is calculated by (a) averaging the corresponding values across all benchmarks (0.99 for H-BD vs 0.84 for T-BD), and (b) directly by considering the total number of TPs, FPs and FNs (0.98 vs 0.74).
 }
 
 %As \tableref{realworldAll} highlights, the difference in leakage alarms by the H-BD and T-BD variants is dramatic. We have analyzed it, and came to the following explanations:
