--- a/exp1.tex
+++ b/exp1.tex
@@ -66,7 +66,8 @@ The value of F-measure is high only when both precision and recall are high. We 
 
 \JC{\paragraph{Results}
 The results obtained for both TaintDroid and \Tool\ on version 1.1 of DroidBench are summarized in \tableref{accuracyDBench} and presented in detail in \tableref{accuracyDBenchDetails}. The findings reported by \Tool\ are also publicly available.\footnote{
-	See archive file droidbench.zip available online at \href{https://www.dropbox.com/sh/ggrcvqsbkiubmlb/faSUXmr9xK}{https://www.dropbox.com/sh/ggrcvqsbkiubmlb/faSUXmr9xK}.
+	See archive file droidbench.zip available online at 
+	{\scriptsize \href{https://www.dropbox.com/sh/98dbvppf525hv58/AAASH9\_vFXtXJtIThk5q3Saoa}{https://www.dropbox.com/sh/98dbvppf525hv58/AAASH9\_vFXtXJtIThk5q3Saoa}}.
 }
 
 Overall, TaintDroid detects 31 true leakages while also reporting 17 false positives, whereas our approach suffers from 2 false negatives, discovering 29 of the true leakages while flagging only 1 false alarm.
