--- a/exp2.tex
+++ b/exp2.tex
@@ -32,8 +32,7 @@ We manually classified the findings into true positives and false positives. For
 The results obtained for H-BD and T-BD are summarized in \tableref{realworldAccuracy}. 
 \tableref{realworld} summarizes the findings reported by both H-BD and T-BD at the granularity of privacy items: the device number, identifier and location, while \tableref{realworldAll} provides a detailed description of the results across all benchmarks including those on which no leakages were detected.
 The warnings reported by the H-BD configuration are also publicly available for review.\footnote{
-	See archive file realworldapps.zip available online at \href{https://www.dropbox.com/sh/ggrcvqsbkiubmlb/faSUXmr9xK}{https://www.dropbox.com/sh/
-	ggrcvqsbkiubmlb/faSUXmr9xK}.
+	See archive file realworldapps.zip available online at {\scriptsize \href{https://www.dropbox.com/sh/98dbvppf525hv58/AAASH9\_vFXtXJtIThk5q3Saoa}{https://www.dropbox.com/sh/98dbvppf525hv58/AAASH9\_vFXtXJtIThk5q3Saoa}}.
 }}
 
 \begin{table}
