--- a/introduction.tex
+++ b/introduction.tex
@@ -6,7 +6,7 @@ Existing platforms provide limited protection against privacy threats. Both the 
 
 \paragraph{Threat Model} In this paper, we address privacy threats due to authentic (as opposed to malicious) mobile applications \OC{\cite{EGCCJMS:OSDI10,RCE:CODASPY13}}{}. \OC{Contrary to malware, such applications execute their declared functionality, though they may still expose the user to unnecessary threats by incorporating extraneous behaviors --- neither required by their core business logic nor approved by the user~\cite{LJ:SEC13} --- such as analytics, advertising, cross-application profiling, social computing, etc. We consider unauthorized release of private information that (almost) unambiguously identifies the user as a privacy threat. Henceforth, we dub such threats \emph{illegitimate}.}{}
 
-While in general there is no bullet-proof solution for privacy enforcement, which can deal with any type of covert channel, implicit flow or proprietary data transformation, and even conservative enforcement approaches can easily be bypassed~\cite{SMBK:SECRYPT13}, there is strong evidence that authentic apps rarely exhibit these challenges. According to a recent study~\cite{HHJSW:CCS11}, and also our empirical data (presented in \secref{experiments}), private information is normally sent to independent third-party servers. Consequently, data items are released in clear form, or at most following well-known encoding/encryption transformations (like Base64 or MD5), to meet the requirement of a standard and general client/server interface.
+While in general there is no bullet-proof solution for privacy enforcement, which can deal with any type of covert channel, implicit flow or application-specific data transformation, and even conservative enforcement approaches can easily be bypassed~\cite{SMBK:SECRYPT13}, there is strong evidence that authentic apps rarely exhibit these challenges. According to a recent study~\cite{HHJSW:CCS11}, and also our empirical data (presented in \secref{experiments}), private information is normally sent to independent third-party servers. Consequently, data items are released in clear form, or at most following well-known encoding/encryption transformations (like Base64 or MD5), to meet the requirement of a standard and general client/server interface.
 
 The challenge, in this setting, is to determine whether the app has taken sufficient means to protect user privacy. Release of private information, even without user authorization, is still legitimate if only a small amount of information has been released. As an example, if an application obtains the full location of the user, but then releases to an analytics server only coarse information like the country or continent, then in most cases this would be perceived as legitimate.
 
