--- a/paper.tex
+++ b/paper.tex
@@ -61,10 +61,15 @@
 %\newcommand\OCO[2]{{\color{blue} #1}{\color{red} [[ #2 ]]}}
 %\newcommand\JCO[2]{{\color{purple} #1}{\color{red} [[ #2 ]]}}
 %\newcommand\added[1]{#1}
-\newcommand\OC[1]{#1}
-\newcommand\JC[1]{#1}
-\newcommand\OCO[2]{#1}
-\newcommand\JCO[2]{#1}
+%\newcommand\OC[1]{#1}
+%\newcommand\JC[1]{#1}
+%\newcommand\OCO[2]{#1}
+%\newcommand\JCO[2]{#1}
+
+\newcommand\OC[1]{{\color{blue} #1}}
+\newcommand\JC[1]{{\color{blue} #1}}
+\newcommand\OCO[2]{{\color{blue} #1}}
+\newcommand\JCO[2]{{\color{blue} #1}}
 
 
 \newcolumntype{P}[1]{>{\raggedright\arraybackslash\hspace{0pt}}p{#1}}
